<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLockScreen"
            type="Boolean"
            android:value="false" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/tv_set_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:text="@string/set_your_password"
            android:textColor="#FF080808"
            android:textSize="19sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/ed_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.vkas.secondlock.ui.wight.VerifyCodeEditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="155dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:vcet_is_pwd="false"
            app:vcet_bg_focus="@drawable/bg_password_focus"
            app:vcet_bg_normal="@drawable/bg_password_normal"
            app:vcet_pwd_radius="10dp"
            app:vcet_width="50dp" />

        <LinearLayout
            android:id="@+id/ll_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_pass">

            <TextView
                android:id="@+id/tv_forget_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forget_your_password_1"
                android:textColor="#979797"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forget_your_password_2"
                android:textColor="#19BC66"
                android:textSize="14sp" />
        </LinearLayout>


        <GridLayout
            android:id="@+id/gl_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="44dp"
            android:columnCount="3"
            android:rowCount="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_forget">

            <TextView
                android:id="@+id/tv_1"
                style="@style/password_text"
                android:text="1"/>

            <TextView
                android:id="@+id/tv_2"
                style="@style/password_text"
                android:text="2"/>

            <TextView
                android:id="@+id/tv_3"
                style="@style/password_text"
                android:layout_marginEnd="0dp"
                android:text="3"/>

            <TextView
                android:id="@+id/tv_4"
                style="@style/password_text"
                android:text="4"/>

            <TextView
                android:id="@+id/tv_5"
                style="@style/password_text"
                android:text="5"/>

            <TextView
                android:id="@+id/tv_6"
                style="@style/password_text"
                android:layout_marginEnd="0dp"
                android:text="6"/>

            <TextView
                android:id="@+id/tv_7"
                style="@style/password_text"
                android:text="7"/>

            <TextView
                android:id="@+id/tv_8"
                style="@style/password_text"
                android:text="8"/>

            <TextView
                android:id="@+id/tv_9"
                style="@style/password_text"
                android:layout_marginEnd="0dp"
                android:text="9"/>

            <TextView
                android:id="@+id/tv_x"
                style="@style/password_text"
                android:text="X"/>

            <TextView
                android:id="@+id/tv_0"
                style="@style/password_text"
                android:text="0"/>

            <TextView
                android:id="@+id/tv_en"
                style="@style/password_text"
                android:layout_marginEnd="0dp"
                android:text="←"/>
        </GridLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_dialog_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3404040"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_lock_dialog"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="11dp"
                android:paddingEnd="16dp"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="77dp"
                    android:layout_height="110dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_dialog_re"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/tv_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:textColor="#FF333333"
                    android:textSize="14sp"
                    android:text="@string/please_enter_the_correct_password_to_access"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_logo" />

                <LinearLayout
                    android:id="@+id/lin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tips">

                    <TextView
                        android:id="@+id/tv_confirm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_dialog_confirm"
                        android:gravity="center"
                        android:paddingStart="30dp"
                        android:paddingTop="11dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="11dp"
                        android:text="Confirm"
                        android:textColor="#FFFFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_single_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_dialog_confirm"
                    android:gravity="center"
                    android:paddingStart="57dp"
                    android:paddingTop="11dp"
                    android:paddingEnd="57dp"
                    android:paddingBottom="11dp"
                    android:textColor="#FFFFFFFF"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
